syntax = "proto3";

option java_multiple_files = true;
option java_package = "hu.bme.aut.ixnoyb.kotlinclothingwebshop.api.grpc";
option java_outer_classname = "ClothingWebshopProto";

package kotlinclothingwebshop;

service ClothingWebshop {

  rpc GetRecommendedArticleIds(IdRequest) returns(ListIdResponse) {}
}

message IdRequest {
  string id = 1;
}

message ListIdResponse {
  repeated string ids = 1;
}